# infra-copilot

./: .gitignore  LICENSE  README.md  demo.cast  pyproject.toml
.github/workflows/: ci.yml
docs/: rocm-setup.md
docs/demo/: demo.cast  tui-demo.cast
src/infra_copilot/: __init__.py  audit.py  cli.py  config.py
src/infra_copilot/agents/: __init__.py  main.py
src/infra_copilot/tools/: __init__.py  kubectl.py  shell.py
src/infra_copilot/ui/: __init__.py  tui.py
tests/: test_kubectl_safety.py
