[project]
name = "infra-copilot"
version = "0.1.0"
description = "Local LLM-powered assistant for sysadmins and SREs. Runs 100% on your GPU."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Luis Salazar", email = "lsalazarm-sec@github.com" }]
keywords = ["llm", "sysadmin", "kubernetes", "sre", "ollama", "ai-agent"]

dependencies = [
    "pydantic-ai>=0.0.14",
    "pydantic>=2.9",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.9",
    "textual>=0.83",
    "kubernetes>=31.0",
    "prometheus-api-client>=0.5.5",
    "structlog>=24.4",
    "tenacity>=9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "types-pyyaml",
]

[project.scripts]
copilot = "infra_copilot.cli:app"

[project.urls]
Homepage = "https://github.com/lsalazarm-sec/infra-copilot"
Issues = "https://github.com/lsalazarm-sec/infra-copilot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infra_copilot"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/infra_copilot"]
